hphp/test/zend/good/ext/simplexml/tests/bug42369.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('simplexml')) echo 'skip simplexml extension is not loaded';
}
