hphp/test/zend/bad/ext/curl/tests/curl_basic_016.php.skipif
<?php 
if (!extension_loaded("curl")) exit("skip curl extension not loaded");
$curl_version = curl_version();
if ($curl_version['version_number'] > 0x071201) {
    exit("skip: tests works only on older versions of curl");
}
?>